
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int * write_key; int * rc4_write_key; int * key_material; int * read_key; int * rc4_read_key; } ;
typedef TYPE_1__ ssl_conn ;
typedef int RC4_KEY ;


 size_t RC4_KEY_LENGTH ;
 int RC4_set_key (int *,size_t,int *) ;
 int generate_key_material (TYPE_1__*) ;
 scalar_t__ malloc (int) ;

void generate_session_keys(ssl_conn* ssl)
{
 generate_key_material(ssl);
 ssl->read_key = &(ssl->key_material[0]);
 ssl->rc4_read_key = (RC4_KEY*) malloc(sizeof(RC4_KEY));
 RC4_set_key(ssl->rc4_read_key, RC4_KEY_LENGTH, ssl->read_key);

 ssl->write_key = &(ssl->key_material[RC4_KEY_LENGTH]);
 ssl->rc4_write_key = (RC4_KEY*) malloc(sizeof(RC4_KEY));
 RC4_set_key(ssl->rc4_write_key, RC4_KEY_LENGTH, ssl->write_key);
}
